# COSC473-Rust-File-Sharing-Decentralised-App

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: file_management.rs  main.rs  messages.rs  network.rs  peer_info.rs  rating.rs  security.rs  ui.rs
files/: rus.rs  todo.txt
server/: Cargo.toml
server/src/: main.rs
