[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
serde_cbor = "0.11.2"
chrono = "0.4.40"
textwrap = "0.16.2"
rand = "0.8.5"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
chacha20poly1305 = "0.10.1"

[dependencies.libp2p]
version = "0.55"
features = ["tokio", "noise", "macros", "tcp", "quic", "yamux", "cbor",
    "request-response", "kad", "gossipsub", "mdns", "identify", "rsa",
    "autonat", "relay", "serde", "rendezvous"]

[[bin]]
name = "client"
path = "src/main.rs"
